# exact-erp-toolkit

./: .gitignore  LICENSE  README.md
exact-client/: .env.example  README.md  exact_client.py  example_demo.py  requirements.txt
mcp-ap-automation/: README.md  pyproject.toml  server.py
mcp-business-insights/: README.md  pyproject.toml  server.py
mcp-exact/: README.md  pyproject.toml  server.py
mcp-hubspot-exact-bridge/: README.md  pyproject.toml  server.py
